# reality

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  skills.md
.cursor/skills/galya-reality/: SKILL.md
.github/workflows/: ci-python.yml  ci-ts.yml  validate-registry-pr.yml
docs/: README.md  package-lock.json  package.json
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.client.tsx  page.tsx
docs/components/: ascii-particles.tsx
docs/content/docs/: configuration.mdx  index.mdx  meta.json  quickstart.mdx  security.mdx  skills.mdx
docs/content/docs/capabilities/: api-model.mdx  index.mdx  (+3 more)
docs/lib/: layout.shared.tsx  shared.ts
examples/langgraph/: README.md  example_graph.py  galya_reality_langgraph.py  pyproject.toml  test_galya_node.py
examples/mastra/: README.md  package-lock.json  package.json  tsconfig.json
examples/mastra/src/: example-scorer.ts  example.ts  galya-scorer.ts
examples/mastra/test/: galya-scorer.test.ts
examples/python/: basic_usage.py
examples/ts/: basic-usage.ts
examples/write_your_own_validator/: parity_fixture_template.json
examples/write_your_own_validator/example_both/: validator.js  validator.py  validator.yaml
examples/write_your_own_validator/python_template/: validator.py  validator.yaml
examples/write_your_own_validator/ts_template/: validator.ts  validator.yaml
registry/: README.md  schema.json
scripts/: demo_language_gate.py  parity_check.py  render-judgement-loop.mjs  validate_registry.py  validate_registry_entries.py
tests/parity/: pytest.ini  test_example_both_parity.py
(+9 files in other folders)
